--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -15,7 +15,9 @@
 
 body {
   background: var(--neutro-dark);
-
+  overflow-x: hidden;
+  width: 100%;
+  box-sizing: border-box;
 
   h3 {
     color: var(--neutral-light);
